Use minified css in bannieres/aide.html

--- a/media/bannieres/aide.html
+++ b/media/bannieres/aide.html
@@ -2,12 +2,7 @@
   <head> 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
     <link href="/templates/re2010/media/favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/template.css" type="text/css" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/position.css" type="text/css" media="screen,projection" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/layout.css" type="text/css" media="screen,projection" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/print.css" type="text/css" media="Print" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/general.css" type="text/css" /> 
-    <link rel="stylesheet" href="/templates/re2010/css/fr-fr.css" type="text/css" /> 
+    <link rel="stylesheet" href="/templates/re2010/css/base-min.css" type="text/css" /> 
     <!--[if lte IE 6]>
 	      <link href="/templates/re2010/css/ieonly.css" rel="stylesheet" type="text/css" />
         <style type="text/css">h1,a,div { behavior: url("/templates/re2010/iepngfix/iepngfix.htc");</style>
@@ -18,7 +13,7 @@
     <!--[if IE 8]> 
         <link href="/templates/re2010/css/ie8only.css" rel="stylesheet" type="text/css" />
         <![endif]--> 
-    
+    <link rel="stylesheet" href="/templates/re2010/css/bonnesondes.css" type="text/css" /> 
     <title>Bannières - Radio Esperanzah! 2010</title> 
   </head> 
   <body> 
@@ -70,9 +65,8 @@
               </p>
 
               <div class="blog"> 
-                <div class="article_row"> 
-                  <div class="article_column column1 cols1"> 
-                    <h2 class="contentheading">Bannière 160x600 pixels</h2> 
+                <div> 
+                  <h2>Bannière 160x600 pixels</h2> 
 
                     <input type="field" value="&lt;a href='http://bit.ly/dv3kgC'&gt;&lt;img src='http://radio.esperanzah.be/bannieres/160x600.png' alt='Radio Esperanzah! 2010'/&gt;&lt;/a&gt;" size="60"></input>
 
@@ -99,12 +93,10 @@
                                  />
                     </object>
                     <a target="_blank" href="http://radio.esperanzah.be/bannieres/160x600.png">Aperçu</a>
-			            </div> 
 			          </div> 
 
-                <div class="article_row"> 
-                  <div class="article_column column1 cols1"> 
-                    <h2 class="contentheading">Bannière 300x250 pixels</h2> 
+                <div> 
+                  <h2>Bannière 300x250 pixels</h2> 
 
                     <input type="field" value="&lt;a href='http://bit.ly/dv3kgC'&gt;&lt;img src='http://radio.esperanzah.be/bannieres/300x250.png' alt='Radio Esperanzah! 2010'/&gt;&lt;/a&gt;" size="60"></input>
 
@@ -131,12 +123,10 @@
                                  />
                     </object>
                     <a target="_blank" href="http://radio.esperanzah.be/bannieres/300x250.png">Aperçu</a>
-			            </div> 
 			          </div> 
 
-                <div class="article_row"> 
-                  <div class="article_column column1 cols1"> 
-                    <h2 class="contentheading">Bannière 468x60 pixels</h2> 
+                <div> 
+                    <h2>Bannière 468x60 pixels</h2> 
 
                     <input type="field" value="&lt;a href='http://bit.ly/dv3kgC'&gt;&lt;img src='http://radio.esperanzah.be/bannieres/468x60.png' alt='Radio Esperanzah! 2010'/&gt;&lt;/a&gt;" size="60"></input>
 
@@ -163,12 +153,10 @@
                                  />
                     </object>
                     <a target="_blank" href="http://radio.esperanzah.be/bannieres/468x60.png">Aperçu</a>
-			            </div> 
 			          </div> 
 
-                <div class="article_row"> 
-                  <div class="article_column column1 cols1"> 
-                    <h2 class="contentheading">Bannière 728x90 pixels</h2> 
+                <div> 
+                  <h2>Bannière 728x90 pixels</h2> 
 
                     <input type="field" value="&lt;a href='http://bit.ly/dv3kgC'&gt;&lt;img src='http://radio.esperanzah.be/bannieres/728x90.png' alt='Radio Esperanzah! 2010'/&gt;&lt;/a&gt;" size="60"></input>
 
@@ -196,7 +184,6 @@
                     </object>
                     <a target="_blank" href="http://radio.esperanzah.be/bannieres/728x90.png">Aperçu</a>
 			            </div> 
-			          </div> 
 
               </div> 
 
