Add JS api and complete help page for it

--- a/media/bannieres/aide.html
+++ b/media/bannieres/aide.html
@@ -191,8 +191,74 @@
               Merci et à très bientôt sur l'antenne de Radio Esperanzah!
             </p>
 
-			      </div> 
+              <h1>Feed RSS</h1> 
 
+              <p>
+                Vous pouvez relayer Radio Esperanzah! en utilisant son feed RSS. 
+                De nombreux outils permettront d'intégrer dans votre site les dernières actualités 
+                en provenance de Floreffe à partir de cette simple URL :
+              </p>
+              <p>
+                <input type="field" value="http://radio.esperanzah.be/feed" size="60"></input>
+                    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+                            width="110"
+                            height="14"
+                            id="clippy" >
+                      <param name="movie" value="/templates/re2010/media/flash/clippy.swf"/>
+                      <param name="allowScriptAccess" value="always" />
+                      <param name="quality" value="high" />
+                      <param name="scale" value="noscale" />
+                      <param name="FlashVars" value="text=http://radio.esperanzah.be/feed"/>
+                      <param name="bgcolor" value="#F3EBE0"/>
+                      <embed src="/flash/clippy.swf"
+                                 width="110"
+                                 height="14"
+                                 name="clippy"
+                                 quality="high"
+                                 allowScriptAccess="always"
+                                 type="application/x-shockwave-flash"
+                                 pluginspage="http://www.macromedia.com/go/getflashplayer"
+                                 FlashVars="text=http://radio.esperanzah.be/feed"
+                                 bgcolor="#F3EBE0"
+                                 />
+                    </object>
+              </p>
+
+              <p>
+              Si vous ne disposez pas de tels outils, vous pouvez en simple copier/coller 
+              insérer ce code javascript
+              qui récupérera et présentera les dernières infos en provenant de Radio Esperanzah! :
+              </p>
+
+                <input type="field" value="http://radio.esperanzah.be/api.js" size="60"></input>
+                    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+                            width="110"
+                            height="14"
+                            id="clippy" >
+                      <param name="movie" value="/templates/re2010/media/flash/clippy.swf"/>
+                      <param name="allowScriptAccess" value="always" />
+                      <param name="quality" value="high" />
+                      <param name="scale" value="noscale" />
+                      <param name="FlashVars" value="text=http://radio.esperanzah.be/api.js"/>
+                      <param name="bgcolor" value="#F3EBE0"/>
+                      <embed src="/flash/clippy.swf"
+                                 width="110"
+                                 height="14"
+                                 name="clippy"
+                                 quality="high"
+                                 allowScriptAccess="always"
+                                 type="application/x-shockwave-flash"
+                                 pluginspage="http://www.macromedia.com/go/getflashplayer"
+                                 FlashVars="text=http://radio.esperanzah.be/api.js"
+                                 bgcolor="#F3EBE0"
+                                 />
+                    </object>
+
+              <p>Un petit aperçu du résultat :</p>
+
+              <script src="../../js/api.js"></script>
+              
+			      </div> 
 
           </div> 
           <div id="right"> 
