Use the public url for api example

--- a/media/bannieres/aide.html
+++ b/media/bannieres/aide.html
@@ -256,7 +256,7 @@
 
               <p>Un petit aperçu du résultat :</p>
 
-              <script src="../../js/api.js"></script>
+              <script src="http://radio.esperanzah.be/api.js"></script>
               
 			      </div> 
 
